--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc --noEmit && vite build && tsc lib/main.tsx --declaration --emitDeclarationOnly --jsx react --esModuleInterop --module ESNext --moduleResolution node --outDir dist",
+    "build": "tsc --noEmit && vite build && tsc lib/main.tsx --declaration --emitDeclarationOnly --jsx react --esModuleInterop --module ESNext --moduleResolution node --outDir dist --skipLibCheck",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/react": "^6.2.9",
+    "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/react": "^6.3.6",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "storybook-builder-vite": "^0.0.12",
     "typescript": "^4.3.2",
     "vite": "^2.3.4"
   },
@@ -32,5 +33,8 @@
     "dist"
   ],
   "typings": "./dist/main.d.ts",
-  "types": "./dist/main.d.ts"
+  "types": "./dist/main.d.ts",
+  "dependencies": {
+    "@stitches/react": "^0.2.3"
+  }
 }
