--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Dhushyanth S",
   "license": "MIT",
   "private": false,
+  "homepage": "https://dhushyanth-s.github.io/Reasax/",
   "scripts": {
     "build": "tsc --noEmit && vite build && tsc lib/main.tsx --declaration --emitDeclarationOnly --jsx react --esModuleInterop --module ESNext --moduleResolution node --outDir dist --skipLibCheck",
     "storybook": "start-storybook -p 6006",
@@ -18,11 +19,14 @@
     "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-essentials": "^6.3.6",
     "@storybook/addon-links": "^6.3.6",
+    "@storybook/addons": "^6.3.6",
     "@storybook/react": "^6.3.6",
+    "@storybook/theming": "^6.3.6",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "storybook-builder-vite": "^0.0.12",
